# provenance-bench

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
coa/: __init__.py  types.py
coa/baselines/: grounded.py  naive.py
corpus/: aurora_qms.json
evalset/: seed.json
promptfoo/: README.md  gen_config.py  provbench_grade.py  provbench_io.py  provbench_provider.py
promptfoo/tests/: conftest.py  test_bridge.py
provbench/: __init__.py  checks.py  contrast.py  data.py  judge.py  retrieval.py  runner.py  score.py  taxonomy.py
provbench/baselines/: __init__.py  llm.py
provbench/models/: __init__.py  claude_cli.py
reports/: llm_haiku.md  llm_sonnet.md  ragas_contrast.md  seed_baselines.md
scripts/: ragas_contrast.py  run_baselines.py  run_llm.py
tests/: test_contrast.py  test_scoring.py  test_seed_integrity.py
